fixed a login screen visibility bug

--- a/src/index.css
+++ b/src/index.css
@@ -4,13 +4,19 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: #ff0000;
+  color: #00ff00;
   background-color: #ff0000;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+h1 {
+  font-size: 4rem;
+  font-weight: 700;
+  color: #00ff00;
 }
 
 body {
